--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,6 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.dynamic]
 version = {attr = "octopost.__version__"}
+
+[tool.setuptools.package-data]
+octopost = ["README.md"]
